fix subtitle spacing issue on mobile

--- a/components/hero/Hero.module.css
+++ b/components/hero/Hero.module.css
@@ -31,7 +31,7 @@
     line-height: 28px;
     letter-spacing: .2px;
     margin-bottom: 2.45rem;
-    margin-inline: -2.1rem;
+    margin-inline: -1.8rem;
     text-align: center;
 
 }
